Fixed links in html, and fixed header and footer issues with width and aligning.

--- a/style.css
+++ b/style.css
@@ -1,26 +1,79 @@
-* {
-    justify-content: center;
-    display: flex;
-    flex-wrap: wrap;
+body {
+    margin: 0;
+    padding: 0;
 }
 
 #grad {
   background-image: linear-gradient(rgb(196, 195, 195), rgb(67, 67, 67));
 }
 
-.Links {
-   
+.Header {
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+header, footer {
+    border: solid;
+    border-color: black;
+    background-image: linear-gradient(aqua, rgb(2, 109, 109));
 }
 
-h1, h3 {
+.Links {
+    position: absolute;
+   bottom: 0;
+   right: 0;
+  margin: 10px;
+}
+
+h1 {
     color: Black;
+    font-size: 4rem;
+}
+
+h3 {
+    color: black;
+    font-size: 2rem;
+}
+
+.About p {
+    width: 50%;
+    text-align: center;
+    margin: 0 auto;
+}
+
+
+.Work {
+text-align: center;
+}
+
+.Work h3 {
+    text-align: left;
 }
 
 .Work img {
     border: solid;
     border-color: black;
     margin: 10px;
-    
+    max-width: 100%;
+    height: auto;
 }
 
-@media 
+.lgImg {
+    width: 50%;
+    margin: 0 auto;
+}
+
+footer {
+    position: relative;
+}
+
+footer div {
+    position: absolute;
+    top: 0;
+    right: 0;
+   margin: 10px;
+   display: flex;
+}
+ footer p {
+    margin: 0 10px;
+ }
